--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .navbar{
-    
+    z-index: 2;
     }
 .headTile {
     background: linear-gradient(#441544, #663366, #663366, #441544);
