--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=Alumni+Sans:wght@500&family=Foldit:wght@300&family=Goldman&family=Gudea&family=Jura:wght@500&family=Orbitron&family=Play&display=swap');
 * {
     box-sizing: border-box;
   }
@@ -9,16 +10,35 @@ body {
 .nav1 {
     
     font-size: 1rem;
+    font-family: 'Jura', serif;
     
+}
+@media only screen and (max-width: 1200px) {
+  .nav1 {
+    
+    font-size: 0.6rem;
+    
+}
 }
 .nav2 {
     
-    font-size: 1.2rem;
+    font-size: 1rem;
     box-shadow:  1px 1px 2px rgb(29, 28, 27),
     1px 1px 2px rgb(0, 0, 0);
+    font-family: 'Jura', serif;
+    text-transform: uppercase;
+    font-weight: bold;
+    
 }
 
-.nav2{
+@media only screen and (max-width: 1200px) {
+  .nav2 {
+    
+    font-size: 0.8rem;
+    
+}
+}
+.nav2 {
     z-index: 1;
     }
 .headTile {
@@ -45,10 +65,12 @@ body {
         -webkit-background-clip: text;    
          }
   }
+  
 .n1 .container {
     border-radius:  2rem  ;
     /*background-image: linear-gradient(#006A48, #2FAC66, #2FAC66, #006A48);*/
     color: initial;
+    
     
    
    /* box-shadow: 4px 4px 2px rgb(229,61,104);*/
@@ -70,7 +92,7 @@ body {
 
 .n2 ul.navbar-nav .nav-item .nav-link {
 	color: rgb(255, 255, 255);
-    
+  
     
 
 }
@@ -81,13 +103,11 @@ body {
 }
 
 .active1, .n1 ul.navbar-nav .nav-item:hover {
-	color: rgb(255, 255, 255);
+	color: rgb(253, 55, 0);
 	
    
-    border-radius: 6px;
-    background: linear-gradient(145deg, rgb(156, 35, 1), rgb(255, 55, 0));
-    box-shadow:  4px 4px 8px rgb(156, 35, 1),
-                 -4px -4px 8px rgb(0, 0, 0);
+  border-bottom:  2px solid rgb(253, 55, 0);
+    
 }
 
 
@@ -157,9 +177,31 @@ body {
 .bgColor1 {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     /*box-shadow: 7px 7px 3px rgb(232, 61, 104);
-    */
+    
+
+    */ 
     
 }
+
+.bgColor1 div .col-sm-6 h3  {
+ font-size: 4rem;
+
+}
+.bgColor1 div .col-sm-6 h5 {
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 1rem;
+  
+ 
+ }
+.bgColor3 {
+  font-family: 'Goldman';
+  font-weight: bold; background-image: url('img/Projets/plan.jpg'); 
+  box-shadow: 0 4px 8px 0 rgb(0, 0, 0), 0 1px 5px 0 rgb(248, 236, 233);
+  border-radius: 2rem;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 
 
 .presentation2 {
@@ -201,7 +243,7 @@ body {
    left: 0% ;
   right: 0% ;
    margin-bottom: 50px ;
-   background-color: rgba(0, 0, 0, 0.5);
+   background-color: rgba(0, 0, 0, 0.7);
  
    width: 100%;
 }
@@ -281,8 +323,10 @@ body {
   }
   
   @media screen and (min-width: 600px) {
-    p.text1 {
+    p.text1{
       font-size: 1.5rem;
+      font-family: 'Jura', serif;
+       
     }
   }
   @media screen and (max-width: 600px) {
